Fix bug so that bottom edge isn't cut off.

--- a/public/static/dico/css/dicopage.css
+++ b/public/static/dico/css/dicopage.css
@@ -1,6 +1,10 @@
 body {
   padding-top: 55px;
 }
+.dico-two-nav-container {
+	padding-top: 55px;
+	padding-bottom: 55px;
+}
 .dico-navbar {
 	background: #D1E1FF;
 	border-radius:0px;
